# Keil_Studio_FAE_Training

./: .gitignore  README.md  vcpkg-configuration.json
Blinky/: Blinky.c  Blinky.cproject.yml  Blinky.csolution.yml  README.md  vcpkg-configuration.json
Blinky/RTE/_Debug_NUCLEO-F756ZG/: RTE_Components.h
CI_CD/: README.md  README.md.old
MLApp/: README.md
MLApp/Tensorflow_LiteRT_HelloWorld/: .clangd  TFLiteRT_HelloWorld+STM32F756ZGTx.cbuild-run.yml  TFLiteRT_HelloWorld.Debug+STM32F756ZGTx.cbuild.yml  TFLiteRT_HelloWorld.cbuild-idx.yml  TFLiteRT_HelloWorld.cbuild-pack.yml  TFLiteRT_HelloWorld.cbuild-set.yml  TFLiteRT_HelloWorld.cproject.yml  TFLiteRT_HelloWorld.csolution.yml  vcpkg-configuration.json
MLApp/Tensorflow_LiteRT_HelloWorld/RTE/Device/STM32F756ZGTx/: regions_NUCLEO-F756ZG.h
MLApp/Tensorflow_LiteRT_HelloWorld/RTE/_Debug_STM32F756ZGTx/: Pre_Include_Global.h  RTE_Components.h
MLApp/Tensorflow_LiteRT_HelloWorld/Training/: train_HelloWorld_model.ipynb
MLApp/Tensorflow_LiteRT_HelloWorld/Training/models/: model.keras  model_float.c  model_float.tflite  model_int8.c  model_int8.tflite
MLApp/Tensorflow_LiteRT_HelloWorld/Training/models_vela/: model_int8_summary_Ethos_U55_High_End_Embedded.csv  model_int8_vela.c  model_int8_vela.tflite
MLApp/Tensorflow_LiteRT_HelloWorld/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MLApp/Tensorflow_LiteRT_HelloWorld/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake
MLApp/Tensorflow_LiteRT_HelloWorld/tmp/TFLiteRT_HelloWorld.Debug+STM32F756ZGTx/: CMakeLists.txt  components.cmake  groups.cmake
MLApp/Tensorflow_LiteRT_HelloWorld/tmp/TFLiteRT_HelloWorld.Debug+STM32F756ZGTx/src/TFLiteRT_HelloWorld.Debug+STM32F756ZGTx-stamp/: TFLiteRT_HelloWorld.Debug+STM32F756ZGTx-configure-.cmake  TFLiteRT_HelloWorld.Debug+STM32F756ZGTx-database-.cmake  TFLiteRT_HelloWorld.Debug+STM32F756ZGTx-source_dirinfo.txt
MLApp/Tensorflow_LiteRT_HelloWorld/tmp/TFLiteRT_HelloWorld.Debug+STM32F756ZGTx/tmp/: TFLiteRT_HelloWorld.Debug+STM32F756ZGTx-cfgcmd.txt  TFLiteRT_HelloWorld.Debug+STM32F756ZGTx-mkdirs.cmake
Mongoose/: README.md  hal.h  wizard.uvoptx  wizard.uvprojx
Mongoose/RTE/Device/STM32F756ZGTx/: startup_stm32f756xx.s
Mongoose/mongoose/: mongoose.c  mongoose_fs.c  mongoose_glue.h
RefApp/: README.md
RefApp/Network/: Network+STM32F756ZGTx.cbuild-run.yml  Network.cbuild-idx.yml  Network.cbuild-pack.yml  Network.cbuild-set.yml  Network.csolution.yml  vcpkg-configuration.json
RefApp/Network/BSD_Client/: .clangd  BSD_Client.Debug+STM32F756ZGTx.cbuild.yml
RefApp/Network/BSD_Client/RTE/_Debug_STM32F756ZGTx/: RTE_Components.h
RefApp/Network/HTTP_Server/: .clangd  HTTP_Server.Debug+STM32F756ZGTx.cbuild.yml  HTTP_Server.cproject.yml  Web.c
RefApp/Network/HTTP_Server/RTE/Network/: Net_Config_ETH_0.h
RefApp/Network/HTTP_Server/RTE/_Debug_STM32F756ZGTx/: RTE_Components.h
RefApp/Network/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
RefApp/Network/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
RefApp/Network/tmp/FCARM/HTTP_Server.Debug+STM32F756ZGTx/: .ninja_log  Auto_FcArm_Cmd.inp  CMakeCache.txt  build.ninja  cmake_install.cmake
RefApp/Network/tmp/HTTP_Server.Debug+STM32F756ZGTx/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
RefApp/Network/tmp/HTTP_Server.Debug+STM32F756ZGTx/src/HTTP_Server.Debug+STM32F756ZGTx-stamp/: HTTP_Server.Debug+STM32F756ZGTx-configure-.cmake  HTTP_Server.Debug+STM32F756ZGTx-database-.cmake  HTTP_Server.Debug+STM32F756ZGTx-source_dirinfo.txt
RefApp/Network/tmp/HTTP_Server.Debug+STM32F756ZGTx/tmp/: HTTP_Server.Debug+STM32F756ZGTx-cfgcmd.txt  HTTP_Server.Debug+STM32F756ZGTx-mkdirs.cmake
uv2csolution/: .clangd  README.md  Target_1.cbuild-run.yml  vcpkg-configuration.json  wizard+Target_1.cbuild-run.yml  wizard+Target_1.cbuild.yml  wizard.cbuild-idx.yml  wizard.cbuild-pack.yml  wizard.cbuild-set.yml  wizard.cproject.yml  wizard.csolution.yml  wizard_Target_1.sct
uv2csolution/.cmsis/: wizard+Target_1.dbgconf
uv2csolution/RTE/_Target_1/: RTE_Components.h
uv2csolution/mongoose/: mongoose.h  mongoose_config.h  mongoose_wizard.json
uv2csolution/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
uv2csolution/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
uv2csolution/tmp/wizard+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
uv2csolution/tmp/wizard+Target_1/src/wizard+Target_1-stamp/: wizard+Target_1-configure-.cmake  wizard+Target_1-database-.cmake  wizard+Target_1-source_dirinfo.txt
uv2csolution/tmp/wizard+Target_1/tmp/: wizard+Target_1-cfgcmd.txt  wizard+Target_1-mkdirs.cmake
